# VIRTUS3

./: .gitignore  README.md  alevinQC.R  convert_alevin.py  dockerfile  mk_tgmap.py  pyproject.toml  salmon_index.sh
data/: NC_007605.1_CDS_EBER12.fa  NC_007605.1_CDS_EBER12.tgMap.tsv  readme.md
data/NC_007605.1_CDS_EBER12_salmon_index/: duplicate_clusters.tsv  info.json
data/NC_007605.1_CDS_salmon_index/: info.json
src/: 2step_cr_al_240627_h10x_Tonsil_MS1713MS1738.sh  __init__.py  __main__.py  logger_config.py  pipeline.py  virtus3.py
